Crash picking object from eyedropper #70691

Closed
opened 2019-10-10 05:31:28 +02:00 by Campbell Barton · 4 comments

With the default blend file:

  • Duplicate the default cube.
  • Add a boolean modifier.
  • Use the eye-dropper to pick an object.

T70691_asan.txt

With the default blend file: - Duplicate the default cube. - Add a boolean modifier. - Use the eye-dropper to pick an object. [T70691_asan.txt](https://archive.blender.org/developer/F7800546/T70691_asan.txt)
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Campbell Barton changed title from Crash picking objects to Crash picking object from eyedropper 2019-10-10 05:35:16 +02:00
Author
Owner

Possible fix, however I think it'd be better to avoid accessing the button after the operator runs since running an operator could do anything including freeing the button.

diff --git a/source/blender/editors/interface/interface_handlers.c b/source/blender/editors/interface/interface_handlers.c
index 174c2710863..f73403a47df 100644
--- a/source/blender/editors/interface/interface_handlers.c
+++ b/source/blender/editors/interface/interface_handlers.c
@@ -3968,7 +3968,9 @@ static bool ui_do_but_extra_operator_icon(bContext *C,

   if (op_icon) {
     ui_but_extra_operator_icon_apply(C, but, op_icon);
-    button_activate_exit(C, but, data, false, false);
+    if (but->active == data) {
+      button_activate_exit(C, but, data, false, false);
+    }
     return true;
   }

Possible fix, however I think it'd be better to avoid accessing the button after the operator runs since running an operator could do anything including freeing the button. ``` diff --git a/source/blender/editors/interface/interface_handlers.c b/source/blender/editors/interface/interface_handlers.c index 174c2710863..f73403a47df 100644 --- a/source/blender/editors/interface/interface_handlers.c +++ b/source/blender/editors/interface/interface_handlers.c @@ -3968,7 +3968,9 @@ static bool ui_do_but_extra_operator_icon(bContext *C, if (op_icon) { ui_but_extra_operator_icon_apply(C, but, op_icon); - button_activate_exit(C, but, data, false, false); + if (but->active == data) { + button_activate_exit(C, but, data, false, false); + } return true; } ```
Julian Eisel was assigned by Campbell Barton 2019-10-10 07:16:21 +02:00

This issue was referenced by 7e020e70d9

This issue was referenced by 7e020e70d9ce5e970ff12313f5565e13545058bb
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70691
No description provided.