Fix T70691: Crash picking object from eyedropper

Caused by 828905190e124